--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/PajaritoMoyqi/WritingBlog.git"
+    "url": "git+https://github.com/PajaritoMoyqi/TEMPLATE-EXPRESS-PajaritoMoyqi"
   },
   "keywords": [
     "blog",
