modify description in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "template-express",
   "version": "1.0.0",
-  "description": "Pajarito Writing Blog",
+  "description": "Node.js Express server template made by PajaritoMoyqi",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
